--- a/level/level01.html
+++ b/level/level01.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,8 +12,8 @@
       <h2>Пройденно:</h2>
       <p>
         <!--   2021 05 11- Ввводные уроки по HTML, CSS, адаптации и сейчас смотрю вводный урок по JavaScript.<br> -->
-        <a href="https://wayup.in/cabinet" target="_blank">
-          2021 05 11 - Way Up\Ввводные уроки по HTML, CSS, адаптации, вводный
+        <a href="https://wayup.in/cabinet" target="_blank"
+          >2021 05 11 - Way Up\Ввводные уроки по HTML, CSS, адаптации, вводный
           урок по JavaScript.</a
         ><br />
       </p>
@@ -21,11 +21,11 @@
       <h2>Изучаю сейчас:</h2>
       <a href="https://www.freecodecamp.org" target="_blank"> FreeCodeCamp</a>
       <p>
-        fffffffffffffffffffffffffffffffffffffffffffffffff 2021 05 12 - Начат
-        курс FreeCodeCamp.org - это скорее не обучающий материал, а больше план.
-        Делая небольшие упражнения, постоянно уходишь на другие ресурсы, чтобы
-        изучить вопрос поподробнее.<br />
-        Плюс практика английского языка. Параллельно пробегаюсь по курсам:<br />
+        2021 05 12 - Начат курс FreeCodeCamp.org - это скорее не обучающий
+        материал, а больше план. Делая небольшие упражнения, постоянно уходишь
+        на другие ресурсы, чтобы изучить вопрос поподробнее.<br />
+        Плюс практика английского языка. Параллельно пробегаюсь другим по
+        курсам:<br />
         <a href="https://schoolsw3.com/index.html" target="_blank"
           >schoolsw3.com - очень тут всё хорошо.</a
         ><br />
@@ -39,14 +39,15 @@
           >www.w3schools.com - еще немного English.</a
         ><br />
         Паралельно смотрю уроки по VS Code,<br />
-        2021 05 28 - убил два дня на командную строку (а чтоб было, но до уровня
-        понять о чём это вообще). GIT - ситему контроля версий и связку с VS
-        Code, чуть разобрался, даже сайт закачал на GitHub<br />
+        2021 05 28 - убил два дня на командную строку (а чтоб было, до уровня
+        понять о чём хоть это вообще). GIT - ситему контроля версий и связку с
+        VS Code, чуть разобрался, даже сайт закачал на GitHub<br />
         и сразу вот вношу правки в VS Code и смотрю как на GitHube все
-        обновляется.<br />
+        обновляется. Плюс еще пять дней разбирался, а оказалось всё через VSC
+        GIU делается.<br />
         <a href="https://youtu.be/1UnnzDhLwcE" target="_blank"
-          >Об инспекторе кода в Chome
-        </a>
+          >Об инспекторе кода в Chome</a
+        >
       </p>
       <p>
         2021 05 23 - пока не трачу время на оформление этого сайта, по курсу
