--- a/level/level01.html
+++ b/level/level01.html
@@ -64,6 +64,11 @@
       <a href="https://git-scm.com/book/ru/v2" target="_blank"
         >Про контроль версий и Git</a
       ><br />
+
+      <a href="https://youtu.be/F1bQEpwFCHc" target="_blank"
+        >Интеграция Visual Studio Code с Github</a
+      >
+      <br />
       <a href="https://docs.microsoft.com/ru-ru/" target="_blank"
         >Связка GIT and VS Code - и много чего еще на MS Docs!!!</a
       ><br />
