--- a/level/level01.html
+++ b/level/level01.html
@@ -41,10 +41,9 @@
         Паралельно смотрю уроки по VS Code,<br />
         2021 05 28 - убил два дня на командную строку (а чтоб было, до уровня
         понять о чём хоть это вообще). GIT - ситему контроля версий и связку с
-        VS Code, чуть разобрался, даже сайт закачал на GitHub<br />
-        и сразу вот вношу правки в VS Code и смотрю как на GitHube все
-        обновляется. Плюс еще пять дней разбирался, а оказалось всё через VSC
-        GIU делается.<br />
+        VS Code, чуть разобрался, даже сайт закачал на GitHub и сразу вот вношу
+        правки в VS Code и смотрю как на GitHube все обновляется. Плюс еще пять
+        дней разбирался, а оказалось всё через VSCode GIU делается.<br />
         <a href="https://youtu.be/1UnnzDhLwcE" target="_blank"
           >Об инспекторе кода в Chome</a
         >
